2000-07-10  Lars J. Aas  <larsa@sim.no>

	* acgeneral.m4 (_AC_OUTPUT_FILES, _AC_OUTPUT_HEADERS):
	Accept special filename '-' for stdin and stdout.

2000-07-10  Akim Demaille  <akim@epita.fr>

	Alexandre's suggestions.

	* autoreconf.sh (update.sh): Use `ls -1dt' instead of `-lt'.
	Use test instead of sed.
	<automake>: If automake is used, always run it: it has its own
	mechanism not to update if unneeded.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (_AC_PROG_ECHO): Modernize.

2000-07-10  Akim Demaille  <akim@epita.fr>

	Stop being ridiculous :*(

	* acgeneral.m4 (AC_SHELL_DIRNAME):  When using m4 the argument
	is named `$1' not `$dir'.
	When using m4 you ought to quote properly.
	When using m4, you should check that there are not too many shell
	quotes (inside the macro itself, and where it is called).
	When you do this, Autoconf, hm, works better.

2000-07-10  Steven G. Johnson  <stevenj@alum.mit.edu>

	Improve --help documentation of important environment variables.

	* acgeneral.m4 (_AC_INIT_HELP): Direct reader to descriptions
	of useful variables at the end of the --help.
	(AC_ARG_VAR): Emphasize use of environment variables to override
	and/or help the configure script.  Ensure that a given variable
	is only documented once in the --help.
	(AC_CHECK_LIB): Call AC_ARG_VAR to document and register the
	LDFLAGS variable, and...
	(AC_CHECK_HEADER): do the same for the CPPFLAGS variable.
	* aclang.m4 (AC_PROG_CC): Call AC_ARG_VAR to document and register
	the CC and CFLAGS variables, and do the same for...
	(AC_PROG_CXX): CXX and CXXFLAGS, and...
	(AC_PROG_F77): F77 and FFLAGS.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* Makefile.am (wget-update): New target.
	(WGET): New variable.

2000-07-10  Akim Demaille  <akim@epita.fr>

	* doc/autoconf.texi (Coding Style): Some more constraints :).

2000-07-10  Akim Demaille  <akim@epita.fr>

	* acspecific.m4 (AC_FUNC_STRERROR_R): Aaaaaaarg!  Don't leave the
	AC_DEFINE inside the AC_CACHE_CHECK.
